doc-surrealdb_versioned_docs/version-1.x/surrealql/functions/database/string.mdx
---
sidebar_position: 17
sidebar_label: String functions
title: String functions | SurrealQL
description: These functions can be used when working with and manipulating text and string values.
---

# String Functions

These functions can be used when working with and manipulating text and string values.

<table>
  <thead>
    <tr>
      <th scope="col">Function</th>
      <th scope="col">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringconcat"><code>string::concat()</code></a></td>
      <td scope="row" data-label="Description">Concatenates strings together</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringcontains"><code>string::contains()</code></a></td>
      <td scope="row" data-label="Description">Check whether a string contains another string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringendswith"><code>string::endsWith()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a string ends with another string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringjoin"><code>string::join()</code></a></td>
      <td scope="row" data-label="Description">Joins strings together with a delimiter</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringlen"><code>string::len()</code></a></td>
      <td scope="row" data-label="Description">Returns the length of a string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringlowercase"><code>string::lowercase()</code></a></td>
      <td scope="row" data-label="Description">Converts a string to lowercase</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringrepeat"><code>string::repeat()</code></a></td>
      <td scope="row" data-label="Description">Repeats a string a number of times</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringreplace"><code>string::replace()</code></a></td>
      <td scope="row" data-label="Description">Replaces an occurrence of a string with another string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringreverse"><code>string::reverse()</code></a></td>
      <td scope="row" data-label="Description">Reverses a string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringslice"><code>string::slice()</code></a></td>
      <td scope="row" data-label="Description">Extracts and returns a section of a string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringslug"><code>string::slug()</code></a></td>
      <td scope="row" data-label="Description">Converts a string into human and URL-friendly string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsplit"><code>string::split()</code></a></td>
      <td scope="row" data-label="Description">Divides a string into an ordered list of substrings</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringstartswith"><code>string::startsWith()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a string starts with another string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringtrim"><code>string::trim()</code></a></td>
      <td scope="row" data-label="Description">Removes whitespace from the start and end of a string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringuppercase"><code>string::uppercase()</code></a></td>
      <td scope="row" data-label="Description">Converts a string to uppercase</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringwords"><code>string::words()</code></a></td>
      <td scope="row" data-label="Description">Splits a string into an array of separate words</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisalphanum"><code>string::is::alphanum()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value has only alphanumeric characters</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisalpha"><code>string::is::alpha()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value has only alpha characters</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisascii"><code>string::is::ascii()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value has only ascii characters</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisdatetime"><code>string::is::datetime()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a string representation of a date and time matches a specified format</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisdomain"><code>string::is::domain()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is a domain</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisemail"><code>string::is::email()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is an email</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringishexadecimal"><code>string::is::hexadecimal()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is hexadecimal</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisip"><code>string::is::ip()</code></a><l className='purple'>Since 1.6.0</l></td>
      <td scope="row" data-label="Description">Checks whether a value is an IP address</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisipv4"><code>string::is::ipv4()</code></a><l className='purple'>Since 1.6.0</l></td>
      <td scope="row" data-label="Description">Checks whether a value is an IP v4 address</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisipv6"><code>string::is::ipv6()</code></a><l className='purple'>Since 1.6.0</l></td>
      <td scope="row" data-label="Description">Checks whether a value is an IP v6 address</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringislatitude"><code>string::is::latitude()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is a latitude value</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringislongitude"><code>string::is::longitude()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is a longitude value</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisnumeric"><code>string::is::numeric()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value has only numeric characters</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringissemver"><code>string::is::semver()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value matches a semver version</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisurl"><code>string::is::url()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is a valid URL</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringisuuid"><code>string::is::uuid()</code></a></td>
      <td scope="row" data-label="Description">Checks whether a value is a UUID</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemvercompare"><code>string::semver::compare()</code></a> <l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Performs a comparison between two semver strings</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemvermajor"><code>string::semver::major()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Extract the major version from a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemverminor"><code>string::semver::minor()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Extract the minor version from a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemverpatch"><code>string::semver::patch()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Extract the patch version from a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemverincmajor"><code>string::semver::inc::major()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Increment the major version of a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemverincminor"><code>string::semver::inc::minor()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Increment the minor version of a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemverincpatch"><code>string::semver::inc::patch()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Increment the patch version of a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemversetmajor"><code>string::semver::set::major()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Set the major version of a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemversetminor"><code>string::semver::set::minor()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Set the minor version of a semver string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#stringsemversetpatch"><code>string::semver::set::patch()</code></a><l className='purple'>Since 1.2.0</l></td>
      <td scope="row" data-label="Description">Set the patch version of a semver string</td>
    </tr>
  </tbody>
</table>

## `string::concat`

The `string::concat` function concatenates strings together.

```surql title="API DEFINITION"
string::concat(string...) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::concat('this', ' ', 'is', ' ', 'a', ' ', 'test');

"this is a test"
```

<br />

## `string::contains`

The `string::contains`  function checks whether a string contains another string.

```surql title="API DEFINITION"
string::contains(string, string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::contains('abcdefg', 'cde');

true
```

<br />

## `string::endsWith`

The `string::endsWith` function checks whether a string ends with another string.

```surql title="API DEFINITION"
string::endsWith(string, string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::endsWith('some test', 'test');

true
```

<br />

## `string::join`

The `string::join` function joins strings together with a delimiter.

```surql title="API DEFINITION"
string::join(string, string...) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::join(', ', 'a', 'list', 'of', 'items');

"a, list, of, items"
```

<br />

## `string::len`

The `string::len` function returns the length of a given string.

```surql title="API DEFINITION"
string::len(string) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::len('this is a test');

14
```

<br />

## `string::lowercase`

The `string::lowercase` function converts a string to lowercase.

```surql title="API DEFINITION"
string::lowercase(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::lowercase('THIS IS A TEST');

"this is a test"
```

<br />

## `string::repeat`

The `string::repeat`  function repeats a string a number of times.

```surql title="API DEFINITION"
string::repeat(string, number) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::repeat('test', 3);

"testtesttest"
```

<br />

## `string::replace`

The `string::replace`  function replaces an occurrence of a string with another string.

```surql title="API DEFINITION"
string::replace(string, string, string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::replace('this is a test', 'a test', 'awesome');

"this is awesome"
```

<br />

## `string::reverse`

The `string::reverse`  function reverses a string.

```surql title="API DEFINITION"
string::reverse(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::reverse('this is a test');

"tset a si siht"
```

<br />

## `string::slice`

The `string::slice` function extracts and returns a section of a string.

```surql title="API DEFINITION"
string::slice(string, number, number) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::slice('this is a test', 10, 4);

"test"
```

<br />

## `string::slug`

The `string::slug`  function converts a string into a human and URL-friendly string.

```surql title="API DEFINITION"
string::slug(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::slug('SurrealDB has launched #database #awesome');

"surrealdb-has-launched-database-awesome"
```

<br />

## `string::split`

The `string::split` function splits a string by a given delimiter.

```surql title="API DEFINITION"
string::split(string, string) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::split('this, is, a, list', ', ');

["this", "is", "a", "list"]
```

<br />

## `string::startsWith`

The `string::startsWith` function checks whether a string starts with another string.

```surql title="API DEFINITION"
string::startsWith(string, string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::startsWith('some test', 'some');

true
```

<br />

## `string::trim`

The `string::trim` function removes whitespace from the start and end of a string.

```surql title="API DEFINITION"
string::trim(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::trim('    this is a test    ');

"this is a test"
```

<br />

## `string::uppercase`

The `string::uppercase` function converts a string to uppercase.

```surql title="API DEFINITION"
string::uppercase(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::uppercase('this is a test');

"THIS IS A TEST"
```

<br />

## `string::words`

The `string::words` function splits a string into an array of separate words.

```surql title="API DEFINITION"
string::words(string) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::words('this is a test');

["this", "is", "a", "test"]
```

<br />

## `string::is::alphanum`

The `string::is::alphanum` function checks whether a value has only alphanumeric characters.

```surql title="API DEFINITION"
string::is::alphanum(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::alphanum("ABC123");

true
```

<br />

## `string::is::alpha`

The `string::is::alpha` function checks whether a value has only alpha characters.

```surql title="API DEFINITION"
string::is::alpha(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::alpha("ABCDEF");

true
```

<br />

## `string::is::ascii`

The `string::is::ascii` function checks whether a value has only ascii characters.

```surql title="API DEFINITION"
string::is::ascii(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::ascii("ABC123");

true
```

<br />

## `string::is::datetime`

The `string::is::datetime` function checks whether a string representation of a date and time matches a specified format.

```surql title="API DEFINITION"
string::is::datetime(string, string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::datetime("2015-09-05 23:56:04", "%Y-%m-%d %H:%M:%S");
```

```bash title="Response"
true
```

This can be useful when validating datetimes obtained from other sources that do not use the ISO 8601 format.

```surql
RETURN string::is::datetime("5sep2024pm012345.6789", "%d%b%Y%p%I%M%S%.f");
```

```bash title="Response"
true
```

```surql
RETURN string::is::datetime("23:56:00 2015-09-05", "%Y-%m-%d %H:%M");
```

```bash title="Response"
false
```

[View all format options](/docs/surrealdb/surrealql/datamodel/formatters)

<br />

## `string::is::domain`

The `string::is::domain` function checks whether a value is a domain.

```surql title="API DEFINITION"
string::is::domain(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::domain("surrealdb.com");

true
```

<br />

## `string::is::email`

The `string::is::email` function checks whether a value is an email.

```surql title="API DEFINITION"
string::is::email(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::email("info@surrealdb.com");

true
```

<br />

## `string::is::hexadecimal`

The `string::is::hexadecimal` function checks whether a value is hexadecimal.

```surql title="API DEFINITION"
string::is::hexadecimal(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::hexadecimal("ff009e");

true
```

<br />

## `string::is::ip` <l className='purple'>Since 1.6.0</l>

The `string::is::ip` function checks whether a value is an IP address.

```surql title="API DEFINITION"
string::is::ip(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::ip("192.168.0.1");

true
```

<br />

## `string::is::ipv4` <l className='purple'>Since 1.6.0</l>

The `string::is::ipv4` function checks whether a value is an IP v4 address.

```surql title="API DEFINITION"
string::is::ipv4(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::ipv4("192.168.0.1");

true
```

<br />

## `string::is::ipv6` <l className='purple'>Since 1.6.0</l>

The `string::is::ipv6` function checks whether a value is an IP v6 address.

```surql title="API DEFINITION"
string::is::ipv6(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::ipv6("2001:0db8:85a3:0000:0000:8a2e:0370:7334");

true
```

<br />

## `string::is::latitude`

The `string::is::latitude` function checks whether a value is a latitude value.

```surql title="API DEFINITION"
string::is::latitude(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::latitude("-0.118092");

true
```

<br />

## `string::is::longitude`

The `string::is::longitude` function checks whether a value is a longitude value.

```surql title="API DEFINITION"
string::is::longitude(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::longitude("51.509865");

true
```

<br />

## `string::is::numeric`

The `string::is::numeric`function checks whether a value has only numeric characters.

```surql title="API DEFINITION"
string::is::numeric(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::numeric("1484091748");

true
```

<br />

## `string::is::semver`

The `string::is::semver` function checks whether a value matches a semver version.

```surql title="API DEFINITION"
string::is::semver(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::semver("1.0.0");

true
```

<br />

## `string::is::url`

The `string::is::url` function checks whether a value is a valid URL.

```surql title="API DEFINITION"
string::is::url(string) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::url("https://surrealdb.com");

true
```

<br />

## `string::is::uuid`

The `string::is::uuid` function checks whether a value is a UUID.

```surql title="API DEFINITION"
string::is::uuid(any) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::is::uuid("018a6680-bef9-701b-9025-e1754f296a0f");

true
```

<br />

## `string::semver::compare` <l className='purple'>Since 1.2.0</l>

The `string::semver::compare` function performs a comparison on two semver strings and returns a number.
A value of `-1` indicates the first version is lower than the second, `0` indicates both versions are
equal, and `1` indicates the first version is higher than the second.

```surql title="API DEFINITION"
string::semver::compare(string, string) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::compare("1.0.0", "1.3.5");

-1
```

<br />

## `string::semver::major` <l className='purple'>Since 1.2.0</l>

The `string::semver::major` function extracts the major number out of a semver string.

```surql title="API DEFINITION"
string::semver::major(string) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::major("3.2.6");

3
```

<br />

## `string::semver::minor` <l className='purple'>Since 1.2.0</l>

The `string::semver::minor` function extracts the minor number out of a semver string.

```surql title="API DEFINITION"
string::semver::minor(string) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::minor("3.2.6");

2
```

<br />

## `string::semver::patch` <l className='purple'>Since 1.2.0</l>

The `string::semver::patch` function extracts the patch number out of a semver string.

```surql title="API DEFINITION"
string::semver::patch(string) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::patch("3.2.6");

6
```

<br />

## `string::semver::inc::major` <l className='purple'>Since 1.2.0</l>

The `string::semver::inc::major` function increments the major number of a semver string. As a result, the minor and patch numbers are reset to zero.

```surql title="API DEFINITION"
string::semver::inc::major(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::inc::major("1.2.3");

"2.0.0"
```

<br />

## `string::semver::inc::minor` <l className='purple'>Since 1.2.0</l>

The `string::semver::inc::minor` function increments the minor number of a semver string. As a result, the patch number is reset to zero.

```surql title="API DEFINITION"
string::semver::inc::minor(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::inc::minor("1.2.3");

"1.3.0"
```

<br />

## `string::semver::inc::patch` <l className='purple'>Since 1.2.0</l>

The `string::semver::inc::patch` function increments the patch number of a semver string.

```surql title="API DEFINITION"
string::semver::inc::patch(string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::inc::patch("1.2.3");

"1.2.4"
```

<br />

## `string::semver::set::major` <l className='purple'>Since 1.2.0</l>

The `string::semver::set::major` function sets the major number of a semver string without changing the minor and patch numbers.

```surql title="API DEFINITION"
string::semver::set::major(string, number) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::set::major("1.2.3", 9);

"9.2.3"
```

<br />

## `string::semver::set::minor` <l className='purple'>Since 1.2.0</l>

The `string::semver::set::minor` function sets the minor number of a semver string without changing the major and patch numbers.

```surql title="API DEFINITION"
string::semver::set::minor(string, number) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::set::minor("1.2.3", 9);

"1.9.3"
```

<br />

## `string::semver::set::patch` <l className='purple'>Since 1.2.0</l>

The `string::semver::set::patch` function sets the patch number of a semver string without changing the major and minor numbers.

```surql title="API DEFINITION"
string::semver::set::patch(string, number) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN string::semver::set::patch("1.2.3", 9);

"1.2.9"
```

<br /><br />